[package]
name = "build-pulse"
description = "Build analyzer and issue prioritizer for Jenkins CI/CD projects."
authors = ["Ethan Wong <ewong@anl.gov>"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["cargo", "derive"] }
env_logger = "0.11.8"
jenkins_api = { git = "https://github.com/lowpolyneko/jenkins-api.rs.git" }
log = "0.4.27"
openssl = { version = "0.10.73", features = ["vendored"] }
maud = "0.27.0"
regex = "1.11.1"
rusqlite = { version = "0.36.0", features = ["bundled", "serde_json"] }
serde = "1.0.219"
toml = "0.8.23"
time = { version = "0.3.41", features = ["formatting", "macros"] }
serde_json = "1.0.140"
chumsky = { version = "0.10.1", features = ["pratt"] }
rusqlite_regex = "0.6.0"
arcstr = "1.2.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
